--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-dropdown",
+  "name": "react-dropdown-browser",
   "version": "1.6.3",
   "description": "React dropdown component",
   "main": "dist/index.js",
   "style": "style.css",
   "repository": {
     "type": "git",
-    "url": "git://github.com/fraserxu/react-dropdown.git"
+    "url": "git://github.com/datavis-tech/react-dropdown-browser.git"
   },
   "files": [
     "dist/index.js",
@@ -28,9 +28,9 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/fraserxu/react-dropdown/issues"
+    "url": "https://github.com/datavis-tech/react-dropdown-browser/issues"
   },
-  "homepage": "https://github.com/fraserxu/react-dropdown",
+  "homepage": "https://github.com/datavis-tech/react-dropdown-browser",
   "dependencies": {
     "classnames": "^2.2.3"
   },
